Fixed a bug
Fixed a bug that shows the horizontal (x) scrollbar when translating the event content, added a overflow-x: hidden to stop this. Line 18.

--- a/css/horizontal_timeline.2.0.css
+++ b/css/horizontal_timeline.2.0.css
@@ -15,6 +15,7 @@ html, body {
 	Also fixes the fixed flexbox elements from moving along with the transforms.*/
 	height: auto;
 	overflow: auto;
+	overflow-x: hidden;
 }
 .horizontal-timeline {
 	opacity: 0;
